--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity android:name=".MakePaymentActivity" />
         <activity android:name=".PaymentDetailsActivity" />
         <activity android:name=".P2PActivity" />
+        <activity android:name=".P2PManualActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
